fixed prev-next font size on iphone vertical display

--- a/site/src/documents/styles/style.css.styl
+++ b/site/src/documents/styles/style.css.styl
@@ -871,8 +871,6 @@ nav li
 		font-size: 65%
 		p
 			font-size: 130%
-	.prev-next
-		font-size: 80%
 	.block
 		h2
 			margin: 2.3em 0 1em
@@ -890,3 +888,7 @@ nav li
 				width: 100%
 				margin: 1em 0
 				min-height: inherit
+
+	// Adjust font sizes
+	.prev-next .title
+		font-size: 70%
